--- a/app/src/main/res/layout/item_dashboard_layout.xml
+++ b/app/src/main/res/layout/item_dashboard_layout.xml
@@ -41,6 +41,15 @@
         android:paddingBottom="@dimen/dashboard_item_paddingTopBottom">
 
         <com.technoqueue.utils.TextViewBold
+            android:id="@+id/tv_dashboard_item_store"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/item_value_text_color"
+            android:textSize="@dimen/dashboard_item_textSize"
+            android:textStyle="bold"
+            tools:text="Store" />
+
+        <com.technoqueue.utils.TextView
             android:id="@+id/tv_dashboard_item_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
