--- a/app/src/main/res/layout/item_list_layout.xml
+++ b/app/src/main/res/layout/item_list_layout.xml
@@ -41,6 +41,14 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.technoqueue.utils.TextViewBold
+            android:id="@+id/tv_store"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/item_value_text_color"
+            android:textSize="@dimen/rv_item_name_textSize"
+            tools:text="Store" />
+
+        <com.technoqueue.utils.TextView
             android:id="@+id/tv_item_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
