--- a/app/src/main/res/layout/activity_store_details.xml
+++ b/app/src/main/res/layout/activity_store_details.xml
@@ -106,7 +106,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/product_details_label_margin"
-                android:text="Current Queue Length"
+                android:text="Orders in Queue"
                 android:textColor="@color/item_value_text_color"
                 android:textSize="@dimen/product_details_label_textSize"
                 app:layout_constraintEnd_toEndOf="parent"
