--- a/app/src/main/res/layout/fragment_sold_products.xml
+++ b/app/src/main/res/layout/fragment_sold_products.xml
@@ -22,7 +22,7 @@
         android:id="@+id/tv_no_sold_products_found"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/no_products_sold_yet"
+        android:text="No orders in queue!"
         android:textAlignment="center"
         android:textSize="@dimen/no_data_found_textSize"
         app:layout_constraintBottom_toBottomOf="parent"
