--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="Select a store to view it's menu"
+        android:text="Select a store to view its menu"
         android:textAlignment="center"
         android:textSize="@dimen/welcome_healthy_recommendations_textSize"
         app:layout_constraintEnd_toEndOf="parent"
