--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -16,7 +16,7 @@
         android:layout_marginEnd="8dp"
         android:text="Welcome to Techno Edge!"
         android:textAlignment="center"
-        android:textSize="@dimen/welcome_textSize"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
