--- a/app/src/main/res/layout/fragment_sold_products.xml
+++ b/app/src/main/res/layout/fragment_sold_products.xml
@@ -18,7 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
+    <com.technoqueue.utils.TextView
         android:id="@+id/tv_no_sold_products_found"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
