--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorOffWhite"
-    tools:context=".ui.fragments.MenuFragment">
+    tools:context=".ui.fragments.MenuFragment"
+    android:id="@+id/menu_fragment">
 
     <TextView
         android:id="@+id/tv_info"
