--- a/app/src/main/res/layout/fragment_orders.xml
+++ b/app/src/main/res/layout/fragment_orders.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorOffWhite"
-    tools:context=".ui.fragments.OrdersFragment">
+    tools:context=".ui.fragments.OrdersFragment"
+    android:id="@+id/order_fragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_my_order_items"
