--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorWhite"
-    tools:context="com.technoqueue.ui.activities.LoginActivity">
+    tools:context="com.technoqueue.ui.activities.LoginActivity"
+    >
 
     <FrameLayout
         android:id="@+id/fl_header_image"
